# gatebase

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
charts/gatebase/: Chart.yaml  values.yaml
charts/gatebase/templates/: NOTES.txt  _helpers.tpl  config-secret.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service-broker.yaml  service-mysql.yaml  service-postgres.yaml  serviceaccount.yaml
crates/gatebase-audit/: Cargo.toml
crates/gatebase-audit/src/: jsonl.rs  lib.rs  sink.rs  sqlite.rs
crates/gatebase-broker/: Cargo.toml
crates/gatebase-broker/src/: auth.rs  dto.rs  error.rs  handlers.rs  lib.rs  routes.rs  server.rs  state.rs
crates/gatebase-cli/: Cargo.toml
crates/gatebase-cli/src/: cli.rs  main.rs  settings.rs
crates/gatebase-cli/src/commands/: access.rs  admin.rs  audit.rs  config.rs  maintenance.rs  mod.rs  proxy.rs  session.rs  systemd.rs  ui.rs  update.rs
crates/gatebase-cli/tests/: docker_e2e.rs
crates/gatebase-cli/ui/: .gitignore  index.html  package.json  vite.config.ts
crates/gatebase-cli/ui/src/: App.tsx  api.ts  index.css  main.tsx
crates/gatebase-cli/ui/src/components/: Pager.tsx  Query.tsx  kit.tsx
crates/gatebase-cli/ui/src/pages/: Audits.tsx  Connections.tsx  Logs.tsx  Sessions.tsx  Users.tsx
crates/gatebase-config/: Cargo.toml
crates/gatebase-config/src/: defaults.rs  lib.rs  load.rs  model.rs
crates/gatebase-core/: Cargo.toml
crates/gatebase-core/src/: access.rs  audit.rs  connection.rs  decision.rs  engine.rs  error.rs  ids.rs  lib.rs  rollback.rs  session.rs  user.rs
crates/gatebase-github/: Cargo.toml
crates/gatebase-github/src/: lib.rs  provider.rs  types.rs
crates/gatebase-metadata/: Cargo.toml
crates/gatebase-metadata/src/: lib.rs  mapping.rs  store.rs
crates/gatebase-metadata/src/entities/: access_approval.rs  access_token.rs  active_connection.rs  audit_event.rs  mod.rs  rollback_artifact.rs  session.rs  user.rs
crates/gatebase-policy/: Cargo.toml
crates/gatebase-policy/src/: classifier.rs  decision.rs  lib.rs  operation.rs  rules.rs
crates/gatebase-proxy-core/: Cargo.toml
crates/gatebase-proxy-core/src/: lib.rs  listener.rs  upstream.rs
crates/gatebase-proxy-mysql/: Cargo.toml
crates/gatebase-proxy-mysql/src/: audit.rs  connection.rs  lib.rs  protocol.rs  rollback.rs  server.rs  upstream.rs
crates/gatebase-proxy-postgres/: Cargo.toml
crates/gatebase-proxy-postgres/src/: audit.rs  connection.rs  lib.rs  protocol.rs  query.rs  rollback.rs  server.rs  upstream.rs
crates/gatebase-session/: Cargo.toml
crates/gatebase-session/src/: claims.rs  factory.rs  issuer.rs  lib.rs  store.rs
docs/: architecture.md  cli.md  config.md  github-app-setup.md  implementation-plan.md  kubernetes.md  quickstart.md  rollback-parser-plan.md  security-model.md  vps-setup.md
examples/: gatebase.compose.yaml  gatebase.yaml
scripts/: install.sh
