[workspace]
members = [
  "crates/gatebase-audit",
  "crates/gatebase-broker",
  "crates/gatebase-cli",
  "crates/gatebase-config",
  "crates/gatebase-core",
  "crates/gatebase-github",
  "crates/gatebase-metadata",
  "crates/gatebase-policy",
  "crates/gatebase-proxy-core",
  "crates/gatebase-proxy-mysql",
  "crates/gatebase-proxy-postgres",
  "crates/gatebase-session",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gatebase/gatebase"
homepage = "https://github.com/gatebase/gatebase"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9.3"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "signal", "time", "io-util"] }
tokio-postgres = "0.7"
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
