[package]
name = "gatebase-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
gatebase-core = { path = "../gatebase-core" }
gatebase-metadata = { path = "../gatebase-metadata" }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
