[package]
name = "gatebase-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "gatebase"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
gatebase-broker = { path = "../gatebase-broker" }
gatebase-config = { path = "../gatebase-config" }
gatebase-core = { path = "../gatebase-core" }
gatebase-proxy-mysql = { path = "../gatebase-proxy-mysql" }
gatebase-proxy-postgres = { path = "../gatebase-proxy-postgres" }
gatebase-session = { path = "../gatebase-session" }
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
mysql_async.workspace = true
tokio-postgres.workspace = true
