[package]
name = "gatebase-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
gatebase-core = { path = "../gatebase-core" }
hex.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6"
