[package]
name = "gatebase-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gatebase-core = { path = "../gatebase-core" }
sea-orm.workspace = true
serde_json.workspace = true
tokio.workspace = true
