[package]
name = "gatebase-proxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
gatebase-config = { path = "../gatebase-config" }
gatebase-core = { path = "../gatebase-core" }
tokio.workspace = true
tracing.workspace = true
