[package]
name = "gatebase-proxy-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gatebase-audit = { path = "../gatebase-audit" }
gatebase-config = { path = "../gatebase-config" }
gatebase-core = { path = "../gatebase-core" }
gatebase-policy = { path = "../gatebase-policy" }
gatebase-proxy-core = { path = "../gatebase-proxy-core" }
gatebase-session = { path = "../gatebase-session" }
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
uuid.workspace = true
